--- a/translations/cart.en.yaml
+++ b/translations/cart.en.yaml
@@ -13,9 +13,11 @@ cart:
     title: Quantity
   total:
     title: Total
+  empty:
+    title: Empty cart!
   error:
     quantity-out-of-bound: Quantity out of bound
-  checkout: Application purpose stopped here. Thankes for using the app !
+  checkout: Application purpose stopped here. Thankes for using the app!
   refresh:
     success: Shopping cart has been sucessfully refreshed
     error: Error while refreshing shopping cart
